tests/predator-regre/test-0033.err
test-0033.c:54:16: error: dereference of already deleted heap object
test-0033.c:93:25: note: from call of destroy_list()
test-0033.c:150:19: note: from call of destroy_h_list()
test-0033.c:122:5: note: from call of main()
